--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -10,9 +10,9 @@
 
 site_name: "Project Documentation"
 #TODO: Change to your GitHub Pages URL.
-site_url: https://denisecase.github.io/datafun-04-notebooks/
+site_url: https://denisecase.github.io/datafun-03-analytics/
 #TODO: Change to your GitHub repository URL.
-repo_url: https://github.com/denisecase/datafun-04-notebooks
+repo_url: https://github.com/denisecase/datafun-03-analytics
 site_description: Project documentation.
 docs_dir: docs
 site_dir: site
@@ -20,7 +20,7 @@ extra:
   social:
     - icon: fontawesome/brands/github
       #TODO: Change to your GitHub repository URL.
-      link: https://github.com/denisecase/datafun-04-notebooks
+      link: https://github.com/denisecase/datafun-03-analytics
 
 # WHY: Material theme is industry standard, well-documented
 theme:
@@ -66,8 +66,5 @@ plugins:
 
 nav:
   - Home: index.md
-  - Operators: operators.md
-  - Branching: branching.md
-  - Repetition: repetition.md
-  - Functions: functions.md
-  - Example Output: example-output.md
+  - Resources: RESOURCES.md
+  - Troubleshooting: TROUBLESHOOTING.md
